# Antigravity-Jupiter-Notebook-MCP

./: .gitignore  README.md  pyproject.toml
.antigravity/: mcp.json
examples/: ml_pipeline.ipynb
src/antigravity_nb/: __init__.py  agent.py  agent_server.py  cli.py  kernel.py  notebook.py  runner.py
