[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "antigravity-nb"
version = "0.1.0"
description = "Jupyter notebook MCP server for Antigravity — edit, run, and orchestrate notebooks via AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["jupyter", "notebook", "mcp", "model-context-protocol", "antigravity", "ai", "agent"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "jupyter_client>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/Ian747-tw/Antigravity-Jupiter-Notebook-MCP"
Repository = "https://github.com/Ian747-tw/Antigravity-Jupiter-Notebook-MCP"
Issues = "https://github.com/Ian747-tw/Antigravity-Jupiter-Notebook-MCP/issues"

[project.scripts]
antigravity-nb = "antigravity_nb.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
